# pico_dev

./: LICENSE  README.md
ftos_ble/port/FreeRTOS-Kernel/: FreeRTOSConfig.h
ftos_ble/src/: CMakeLists.txt  defs.h  ftos_tasks.h  main.c  pico_init.c  pico_init.h
ftos_ble/src/GAP_Advertisement/: gap_config.h
ftos_ble/src/GATT_Service/: server_gattfile.gatt  service_implementation.h
ftos_demo/: CMakeLists.txt  FreeRTOS_Kernel_import.cmake
ftos_demo/src/: CMakeLists.txt  defs.h  ftos_7segPlus.c  ftos_7segPlus.h  ftos_ssd1306.c  ftos_ssd1306.h  main.c  pico_init.c  pico_init.h  ssd1306_font.h
